feat: added dashboard & report endpoints and handling of the same